[tool.poetry]
name = "gogul-drive"
version = "0.1.0"
description = "A basic file server."
authors = ["Gokul Narayanan <gokul.narayanan@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
sqlalchemy = "2.0.36"
psycopg = {version = "3.2.3", extras = ["binary"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
